# huawei_kenpeng

./: CMakeLists.txt  README.md  sign.sh
boost159/include/boost/: assert.hpp  cstdint.hpp  integer_traits.hpp
boost159/include/boost/align/detail/: aligned_alloc_android.hpp  aligned_alloc_macos.hpp  aligned_alloc_msvc.hpp  aligned_alloc_posix.hpp  aligned_alloc_sunos.hpp
boost159/include/boost/asio/: error.hpp
boost159/include/boost/asio/detail/: signal_set_service.hpp  socket_types.hpp
boost159/include/boost/chrono/: config.hpp
boost159/include/boost/chrono/detail/: scan_keyword.hpp
boost159/include/boost/compatibility/cpp_c_headers/: cassert  cctype  cerrno  cfloat  climits  clocale  cmath  csetjmp  csignal  cstdarg  cstddef  cstdio  cstdlib  cstring  ctime  cwchar  cwctype
boost159/include/boost/compute/detail/: parameter_cache.hpp
boost159/include/boost/config/compiler/: borland.hpp  codegear.hpp  xlcpp_zos.hpp
boost159/include/boost/config/detail/: suffix.hpp
boost159/include/boost/config/platform/: cygwin.hpp  vxworks.hpp  zos.hpp
boost159/include/boost/config/stdlib/: libstdcpp3.hpp  sgi.hpp  stlport.hpp  vacpp.hpp
boost159/include/boost/container/detail/: alloc_lib.h
boost159/include/boost/context/posix/: protected_fixedsize_stack.hpp
boost159/include/boost/coroutine/posix/: protected_stack_allocator.hpp
boost159/include/boost/detail/: fenv.hpp
boost159/include/boost/dll/: runtime_symbol_info.hpp  shared_library_load_mode.hpp
boost159/include/boost/dll/detail/: system_error.hpp
boost159/include/boost/dynamic_bitset/: dynamic_bitset.hpp
boost159/include/boost/exception/: errinfo_errno.hpp  errinfo_file_handle.hpp
boost159/include/boost/exception/detail/: exception_ptr.hpp
boost159/include/boost/graph/: graph_utility.hpp  graphviz.hpp  rmat_graph_generator.hpp
boost159/include/boost/graph/distributed/: rmat_graph_generator.hpp
boost159/include/boost/icl/: gregorian.hpp  ptime.hpp
boost159/include/boost/icl/type_traits/: to_string.hpp  type_to_string.hpp
boost159/include/boost/integer/: integer_log2.hpp
boost159/include/boost/interprocess/: anonymous_shared_memory.hpp  errors.hpp  xsi_key.hpp
boost159/include/boost/interprocess/detail/: file_locking_helpers.hpp  os_thread_functions.hpp  workaround.hpp
boost159/include/boost/iostreams/detail/: current_directory.hpp  system_failure.hpp
boost159/include/boost/iterator/: zip_iterator.hpp
boost159/include/boost/lexical_cast/detail/: converter_lexical_streams.hpp
boost159/include/boost/locale/: formatting.hpp
boost159/include/boost/log/detail/: config.hpp  snprintf.hpp
boost159/include/boost/math/: tr1.hpp
boost159/include/boost/math/complex/: details.hpp
boost159/include/boost/math/concepts/: real_concept.hpp  std_real_concept.hpp
boost159/include/boost/math/cstdfloat/: cstdfloat_types.hpp
boost159/include/boost/math/policies/: policy.hpp
boost159/include/boost/math/special_functions/: expm1.hpp  fpclassify.hpp  lanczos.hpp  log1p.hpp  next.hpp
boost159/include/boost/math/tools/: precision.hpp
boost159/include/boost/multi_index/detail/: bucket_array.hpp
boost159/include/boost/pending/: lowest_bit.hpp
boost159/include/boost/python/detail/: python22_fixed.h  wrap_python.hpp
boost159/include/boost/qvm/: math.hpp
boost159/include/boost/range/detail/: implementation_help.hpp
boost159/include/boost/regex/pending/: unicode_iterator.hpp
boost159/include/boost/regex/v4/: regex_workaround.hpp
boost159/include/boost/signals2/detail/: lwm_pthreads.hpp
boost159/include/boost/smart_ptr/detail/: atomic_count_pt.hpp  (+6 more)
boost159/include/boost/winapi/: error_handling.hpp
itrustee_client/: CMakeLists.txt  Makefile_1
itrustee_client/src/authentication/: tee_auth_common.c  tee_get_native_cert.c
itrustee_client/src/libteec_vendor/: tee_client_api.c  tee_client_app_load.c  tee_client_socket.c  tee_load_sec_file.c  tee_session_pool.c
itrustee_client/src/teecd/: CMakeLists.txt  fs_work_agent.c  misc_work_agent.c  secfile_load_agent.c  system_ca_auth.c  tee_ca_auth.c  tee_ca_auth.h  tee_ca_daemon.c
itrustee_client/src/tlogcat/: CMakeLists.txt  proc_tag.c  sys_syslog_cfg.c  tarzip.c  tlogcat.c
itrustee_sdk/include/TA/: tee_arith_api.h  tee_crypto_api.h  tee_defines.h
itrustee_sdk/include/TA/huawei_ext/: tee_crypto_err.h  tee_err.h
libboundscheck/: CMakeLists.txt  Makefile
libboundscheck/include/: securec.h  securectype.h
libboundscheck/src/: CMakeLists.txt  fscanf_s.c  fwscanf_s.c  gets_s.c  input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  scanf_s.c  securecutil.h  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  wcsncpy_s.c  wcstok_s.c  wmemcpy_s.c  wmemmove_s.c  wscanf_s.c
rsa/: proto.h
rsa/CA/: CMakeLists.txt
rsa/CA/encrypt_card/: CMakeLists.txt  encrypt_card_clean.cpp  encryption_card.cpp  encryption_card.h  kp_tee_encrypt.cpp  kp_tee_encrypt.h  main.cpp  my_aes_opmode.h
rsa/CA/encrypt_card/kp_tee_ca_include/: ca_proto.h
rsa/CA/encrypt_card/kp_tee_test/: test1.cpp  test2.c
rsa/CA/encrypt_card/nvx_soft_sdf/: sdf_crypt.cpp  sdf_crypt.h
rsa/CA/encrypt_card/sdf/: README.md  base_type.h  main.c  sdb_sdf.h  sdf.h  sdf_dev_manage.h  sdf_type.h  sdftool.caa
rsa/CA/encrypt_card/sdf/kernel-module/ccore_driver/CCP903_SEC_MODULE/CCP903_SEC_BASE/: Makefile  ccp903_cards.c  ccp903_common.c  ccp903_dbg.c  ccp903_sec.c  compate_interface.c  job.c  jr.c
rsa/CA/encrypt_card/sdf/kernel-module/ccore_driver/CCP903_SEC_MODULE/CCP903_SEC_CDEV/: Makefile  csec_cdev.c
rsa/CA/encrypt_card/sdf/kernel-module/ccore_driver/CCP903_SEC_MODULE/INCLUDE/: ccp903_dbg.h  compate.h  desc.h  desc_constr.h  jr.h  pci_csec.h  rsa_job.h  sec.h  sm2_job.h  sm9.h
rsa/TA/: CMakeLists.txt  Makefile  config_cloud.ini  manifest.txt  securec.h  ta_demo.c
rsa/TA/TA_cert/: private_key.pem
rsa/TA/signed_config/: config
(+73 files in other folders)
